feat: integrate Better Auth for user authentication and session management
- Added Better Auth dependencies to package.json.
- Implemented authentication routes using Better Auth in route.ts.
- Created a protected dashboard page with user session management.
- Developed login page with Google sign-in functionality.
- Added Not Found page for handling 404 errors.
- Updated layout to include AuthProvider for session context.
- Created components for login form, logout button, and protected route.
- Defined database schema and migrations for user authentication.
- Implemented auth client for managing user sessions and sign-in/sign-out functionality.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@better-fetch/fetch": "^1.1.18",
     "@neondatabase/serverless": "^1.0.1",
+    "better-auth": "^1.2.12",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "next": "15.4.1",
