feat: integrate Google Generative AI for content enhancement; add AI Refine functionality in CreateTopic form; update API routes for AI processing

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
+    "@google/generative-ai": "^0.24.1",
     "@neondatabase/serverless": "^1.0.1",
     "better-auth": "^1.2.12",
     "dotenv": "^17.2.0",
