--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:reset": "npx tsx src/db/cleanup.ts"
   },
   "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
